fix: map guess not working without accents + suggestions overflow

--- a/geodle/app/globals.css
+++ b/geodle/app/globals.css
@@ -13,7 +13,7 @@
 
 .suggestion{
     @apply cursor-pointer;
-    @apply uppercase;
+    @apply capitalize;
 }
 
 .suggestion:hover{
